force-app/main/default/objects/Data_Subject_Request__c/Data_Subject_Request__c.object-meta.xml
<CustomObject>
    <label>Data Subject Request</label>
    <nameField>
        <displayFormat>DSR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Subject Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>