force-app/main/default/objects/Data_Subject_Request__c/fields/Data_Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject_Id__c</fullName>
    <label>Data Subject Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>