force-app/main/default/objects/Data_Subject_Request__c/fields/Data_Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject_Name__c</fullName>
    <label>Data Subject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>