force-app/main/default/objects/Data_Subject_Request__c/fields/Policy_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_File_Id__c</fullName>
    <label>Policy File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>