force-app/main/default/objects/Data_Subject_Request__c/fields/Policy_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Policy_File_URL__c</fullName>
    <label>Policy File URL</label>
    <type>Url</type>
</CustomField>