force-app/main/default/objects/Data_Subject_Request__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <label>Policy Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>