force-app/main/default/objects/Data_Subject_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>