force-app/main/default/objects/Data_Subject_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Subject_Name__c</columns>
    <columns>Data_Subject_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Data_Subject_Id__c</columns>
    <columns>Policy_Name__c</columns>
    <columns>Policy_File_URL__c</columns>
    <columns>Policy_File_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>